tests/macros/password/page_size.stderr
error: option `page_size` does not exist for kind `password`
 --> $DIR/page_size.rs:2:40
  |
2 |     inquisition::questions![password { page_size: todo!() }];
  |                                        ^^^^^^^^^
