tests/macros/password/page_size.rs
fn main() {
    inquisition::questions![password { page_size: todo!() }];
}
